2013-03-04  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/bits/mman-linux.h: New file, with Linux
	common definitions.

	* sysdeps/unix/sysv/linux/sh/bits/mman.h: Remove all defines
	provided by bits/mman-linux.h and include <bits/mman-linux.h>.
	* sysdeps/unix/sysv/linux/x86/bits/mman.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/bits/mman.h: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/bits/mman.h: Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/mman.h: Likewise.

2013-03-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	[BZ #15055]
	* sysdeps/ieee754/ldbl-128ibm/e_acoshl.c (__ieee754_acoshl): Use
	__ieee754_sqrl instead of __sqrl.

2013-03-01  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/powerpc/fpu/fpu_control.h: Move to ...
	* sysdeps/powerpc/fpu_control.h: ... here.
	* sysdeps/powerpc/fpu/bits/fenvinline.h: Move to ...
	* sysdeps/powerpc/bits/fenvinline.h: ... here.
	* sysdeps/powerpc/fpu/bits/mathinline.h: Move to ...
	* sysdeps/powerpc/bits/mathinline.h: ... here.

2013-03-01  Roland McGrath  <roland@hack.frob.com>

	* elf/dl-hwcaps.c (_dl_important_hwcaps):
	Change [NEED_DL_SYSINFO || NEED_DL_SYSINFO_DSO] conditionals
	to just [NEED_DL_SYSINFO_DSO].
	* elf/dl-support.c: Likewise.
	* elf/dl-sysdep.c (_dl_sysdep_start): Likewise.
	* elf/rtld.c (dl_main): Likewise.
	* elf/setup-vdso.h (setup_vdso): Likewise.
	* sysdeps/generic/ldsodefs.h (struct rtld_global_ro): Likewise.
	* sysdeps/unix/sysv/linux/dl-sysdep.c
	(_dl_discover_osversion): Likewise.

2013-03-01  Carlos O'Donell  <carlos@redhat.com>

	* csu/libc-start.c (__pthread_initialize_minimal): Revert last change.
	* csu/libc-tls.c (__pthread_initialize_minimal): Likewise.

2013-03-01  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* NEWS: Mention libm performance improvements and non-x86 PI
	futex support.

	* csu/libc-start.c (__pthread_initialize_minimal): Change
	function arguments.
	* csu/libc-tls.c (__pthread_initialize_minimal): Likewise.
